@@ -17,7 +17,6 @@
 
 package org.opengroup.osdu.entitlements.v2.jdbc.spi.jdbc.creategroup;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.Deque;
 import java.util.Optional;
 import java.util.Set;
@@ -56,7 +55,7 @@ public class CreateGroupRepoJdbc implements CreateGroupRepo {
 
 		try {
 			executeCreateGroupOperation(groupNode, createGroupRepoDto);
-			return ImmutableSet.of(createGroupRepoDto.getRequesterNode().getNodeId());
+			return Set.of(createGroupRepoDto.getRequesterNode().getNodeId());
 		} catch (DuplicateKeyException e) {
 			throw new DatabaseAccessException(HttpStatus.CONFLICT, "This group already exists");
 		} catch (Exception e) {
